--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
-    "npm-watch": "^0.7.0"
+    "npm-watch": "^0.7.0",
+    "react-helmet": "^6.1.0"
   }
 }
